# FFMeshSplat

./: .env  .gitignore  Makefile  README.md  pyproject.toml  uv.toml
config/: main.yaml
ffmeshsplat/: __init__.py  main.py
src/: main.py
src/dataset/: mipnerf360.py  openvid.py  resizing.py
tests/: __init__.py  test_main.py
